Rough draft. Contact still WIP.

--- a/src/assets/css/variables.css
+++ b/src/assets/css/variables.css
@@ -1,3 +1,7 @@
 :root {
-    --small-breaking-point: 600px;
+    --primary-background-color: red;
+    --secondary-background-color: purple;
+    --primary-font-color: black;
+    --secondary-font-color: lightgrey;
+    --highlight-color: green;
 }
